--- a/app/scss/buttons/_circle-btn.scss
+++ b/app/scss/buttons/_circle-btn.scss
@@ -30,8 +30,17 @@
     }
 
     &:active {
-        .circle-btn__icon {
+        svg {
             transform: scale(1.2);
+        }
+    }
+
+    &--icon {
+        margin-right: 15px;
+        box-shadow: 0 6px 47px 3px rgba(37, 37, 37, 0.05);
+
+        svg {
+            fill: $blue20;
         }
     }
 }
