--- a/app/scss/cards/_article-card.scss
+++ b/app/scss/cards/_article-card.scss
@@ -6,22 +6,26 @@
     max-width: 370px;
     background-color: $bg;
 
-    &__image {
+    &__box {
+        display: block;
         width: 100%;
         height: 250px;
         overflow: hidden;
     }
 
     &__img {
+        width: 100%;
         height: 100%;
         object-fit: cover;
         transition: transform 1.5s;
     }
 
     &__news {
-        display: inline-block;
+        @include line-clamp(1);
+
         margin-left: 28px;
-        padding: 5px 30px;
+        padding: 3px 0;
+        width: 103px;
         border: 2px solid transparent;
         border-radius: 15px;
         font-weight: 700;
@@ -54,22 +58,23 @@
         min-height: 150px;
     }
 
-    &__text {
+    &__subtitle {
         flex-grow: 1;
         padding-bottom: 16px;
         font-family: "DMSans", sans-serif;
         font-weight: 500;
         font-size: 18px;
-        line-height: 1.3;
+        line-height: 1.2;
         color: $black30;
+    }
 
-        p {
-            @include line-clamp (5);
-        }
+    &__link {
+        @include line-clamp (5);
     }
 
     &__bottom {
         display: flex;
+        align-items: center;
         padding: 22px 0 27px;
         border-top: 1px solid #e0e0e0;
         font-size: 12px;
@@ -77,17 +82,41 @@
         text-transform: uppercase;
     }
 
-    &__date {
-        margin-right: 30px;
-    }
-
-    &__icon {
-        margin-right: 5px;
-        width: 12px;
-        height: 12px;
+    &__author {
+        &::before {
+            background-image: url("../../images/sprite.svg#user");
+        }
     }
 
     &:hover .article-card__img {
         transform: scale(1.2);
     }
+
+    &__date,
+    &__author {
+        position: relative;
+        margin-right: 30px;
+        padding-left: 20px;
+
+        &::before {
+            content: "";
+            position: absolute;
+            left: 0;
+            top: -2px;
+            width: 15px;
+            height: 16px;
+            background-image: url("../../images/sprite.svg#date");
+            background-repeat: no-repeat;
+        }
+    }
+/* stylelint-disable */
+    &__author {
+        &::before {
+            top: -1px;
+            width: 12px;
+            height: 13px;
+            background-image: url("../../images/sprite.svg#user");
+        }
+    }
+    /* stylelint-enable */
 }
