--- a/app/scss/cards/_product-card.scss
+++ b/app/scss/cards/_product-card.scss
@@ -2,15 +2,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-end;
-    padding: 30px 15px 40px;
+
+    // justify-content: flex-end;
+    padding: 30px 15px 20px;
     width: 270px;
     height: 385px;
     border: 3px solid transparent;
     box-shadow: 0 6px 47px 3px rgba(37, 37, 37, 0.05);
 
-    &__image {
+    &__box {
         position: relative;
+        flex-shrink: 0;
         width: 250px;
         height: 220px;
         overflow: hidden;
@@ -23,7 +25,7 @@
         object-fit: contain;
     }
 
-    &__icons {
+    &__list {
         position: absolute;
         left: 50%;
         bottom: 40px;
@@ -33,23 +35,16 @@
         transition: transform 0.5s;
     }
 
-    &__icon {
-        margin-right: 15px;
-        box-shadow: 0 6px 47px 3px rgba(37, 37, 37, 0.05);
-
-        svg {
-            fill: $blue20;
-        }
-    }
-
     &__subtitle {
-        @include line-clamp (1);
+        @include line-clamp (2);
 
         margin-top: 40px;
+        width: 110px;
         font-family: "DMSans", sans-serif;
         font-weight: 500;
         font-size: 16px;
-        line-height: 2.2;
+        line-height: 1.2;
+        text-align: center;
         color: $blue80;
     }
 
@@ -58,7 +53,7 @@
         text-align: center;
     }
 
-    &:hover .product-card__icons {
+    &:hover .product-card__list {
         transform: translate(-50%, 0);
     }
 }
