--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -108,6 +108,8 @@
 }
 
 .menu {
+    display: contents;
+
     &__list {
         display: flex;
         justify-content: center;
@@ -171,7 +173,7 @@
         &--footer {
             padding: 0 10px;
 
-            a {
+            .menu__link {
                 font-weight: 400;
                 font-size: 14px;
             }
@@ -179,6 +181,10 @@
             &:not(:last-child) {
                 margin: 0;
                 border-right: 1px solid #436372;
+            }
+
+            &:last-child {
+                padding-right: 0;
             }
         }
     }
@@ -245,19 +251,17 @@
         }
     }
 
-    // здесь line-height оставил в px поскольку за счет него центрирую цифру по вертикали
-
     &__num {
         position: absolute;
         right: 23px;
         top: 8px;
-        width: 16px;
         height: 16px;
+        min-width: 16px;
         border-radius: 50%;
         font-family: "DMSans", sans-serif;
         font-weight: 400;
         font-size: 10px;
-        line-height: 18px;
+        line-height: 1.8;
         text-align: center;
         color: $blue80;
         background-color: $bg;
