--- a/app/scss/components/_partners.scss
+++ b/app/scss/components/_partners.scss
@@ -6,13 +6,16 @@
         display: flex;
     }
 
-    &__link {
+    &__item {
         display: flex;
+        flex-direction: column-reverse;
         height: 85px;
     }
 
     &__img {
         margin: auto;
+        height: 100%;
+        object-fit: contain;
     }
 
     @include r($sm) {
