--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,8 +1,8 @@
 @import "fonts";
 @import "vars";
+@import "mixins";
 @import "reset";
 @import "libs";
-@import "mixins";
 @import "global";
 
 /* stylelint-disable */
@@ -18,18 +18,19 @@
 
 // components
 
-@import "components/circle-btn";
+@import "buttons/circle-btn";
+@import "animations/animations-link.scss";
+@import "cards/promo-card";
 @import "components/partners";
-@import "components/article-card";
+@import "cards/article-card";
 @import "components/articles";
 @import "components/header";
 @import "components/footer";
-@import "components/mix-filter";
-@import "components/design-card";
-@import "components/title";
-@import "components/buttons";
-@import "components/subscribtion-form";
-@import "components/product-card";
+@import "filters/mix-filter";
+@import "cards/design-card";
+@import "buttons/main-buttons";
+@import "forms/subscribtion-form";
+@import "cards/product-card";
 
 
 /* stylelint-enable */
