added include-html and breadcrumbs module

--- a/app/scss/buttons/_main-buttons.scss
+++ b/app/scss/buttons/_main-buttons.scss
@@ -1,8 +1,7 @@
 .button {
     position: relative;
-    display: block;
-    padding: 23px 10px 23px 26px;
-    width: 200px;
+    display: inline-block;
+    padding: 23px 100px 23px 26px;
     overflow: hidden;
     outline: transparent;
     border: 2px solid transparent;
@@ -53,8 +52,7 @@
     }
 
     &--transparent {
-        padding: 23px 20px;
-        width: 180px;
+        padding: 23px 80px 23px 26px;
         border: 1px solid #b3b7b5;
         border-radius: 5px;
         color: $blue70;
