--- a/app/scss/index/_design.scss
+++ b/app/scss/index/_design.scss
@@ -7,7 +7,7 @@
         margin-bottom: 20px;
     }
 
-    &__list {
+    &__mix-filter {
         margin-bottom: 80px;
 
         @include r($lg) {
