--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -24,11 +24,13 @@
 @import "components/partners";
 @import "cards/article-card";
 @import "components/articles";
+@import "components/breadcrumbs";
 @import "components/header";
 @import "components/footer";
 @import "filters/mix-filter";
 @import "cards/design-card";
 @import "buttons/main-buttons";
+@import "buttons/clickable-area";
 @import "forms/subscribtion-form";
 @import "cards/product-card";
 
