--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -9,12 +9,12 @@ $sm: 576px;
 $md: 768px;
 $lg: 992px;
 $xl: 1200px;
-$xxl: 1400px;
 
 // blue
 $blue20: #a3bbc8;
 $blue70: #436372;
 $blue80: #243f4d;
+$blue90: #222933;
 
 // rose
 $pink20: #feefe2;
