--- a/app/scss/animations/animations-link.scss
+++ b/app/scss/animations/animations-link.scss
@@ -2,7 +2,7 @@
     position: relative;
     outline: transparent;
     border: 3px solid transparent;
-    transition: box-shadow 0.3s;
+    transition: box-shadow 0.3s, border-color 0.3s, color 0.3s;
 
     &:focus {
         border-bottom: 3px solid $blue20;
