--- a/app/scss/cards/_article-card.scss
+++ b/app/scss/cards/_article-card.scss
@@ -1,10 +1,35 @@
 .article-card {
     position: relative;
     width: 100%;
-    height: 100%;
-    min-height: 420px;
+    height: 420px;
     max-width: 370px;
     background-color: $bg;
+
+    &__info {
+        position: relative;
+        margin-right: 30px;
+        padding-left: 20px;
+
+        &::before {
+            content: "";
+            position: absolute;
+            left: 0;
+            top: -2px;
+            width: 15px;
+            height: 16px;
+            background-image: url("../images/sprite.svg#date");
+            background-repeat: no-repeat;
+        }
+
+        &--author {
+            &::before {
+                top: -1px;
+                width: 12px;
+                height: 13px;
+                background-image: url("../images/sprite.svg#user");
+            }
+        }
+    }
 
     &__box {
         display: block;
@@ -21,11 +46,11 @@
     }
 
     &__news {
-        @include line-clamp(1);
+        // @include line-clamp(1);
 
+        display: inline-block;
         margin-left: 28px;
-        padding: 3px 0;
-        width: 103px;
+        padding: 3px 28px;
         border: 2px solid transparent;
         border-radius: 15px;
         font-weight: 700;
@@ -69,7 +94,7 @@
     }
 
     &__link {
-        @include line-clamp (5);
+        @include line-clamp (3);
     }
 
     &__bottom {
@@ -84,39 +109,11 @@
 
     &__author {
         &::before {
-            background-image: url("../../images/sprite.svg#user");
+            background-image: url("../images/sprite.svg#user");
         }
     }
 
     &:hover .article-card__img {
         transform: scale(1.2);
     }
-
-    &__date,
-    &__author {
-        position: relative;
-        margin-right: 30px;
-        padding-left: 20px;
-
-        &::before {
-            content: "";
-            position: absolute;
-            left: 0;
-            top: -2px;
-            width: 15px;
-            height: 16px;
-            background-image: url("../../images/sprite.svg#date");
-            background-repeat: no-repeat;
-        }
-    }
-/* stylelint-disable */
-    &__author {
-        &::before {
-            top: -1px;
-            width: 12px;
-            height: 13px;
-            background-image: url("../../images/sprite.svg#user");
-        }
-    }
-    /* stylelint-enable */
 }
