--- a/app/scss/cards/_promo-card.scss
+++ b/app/scss/cards/_promo-card.scss
@@ -8,22 +8,24 @@
     max-width: 870px;
     background-color: $pink20;
 
-    &__link {
-        text-align: justify;
-    }
-
     &__box {
-        flex-basis: 355px;
+        flex-basis: 340px;
         margin-top: -180px;
-        margin-right: 15px;
+        margin-left: 15px;
 
         @include r($md) {
-            display: none;
+            flex-basis: auto;
+            margin-top: -55px;
+            height: 220px;
         }
     }
 
     &__img {
         margin-left: auto;
+
+        @include r($md) {
+            height: 100%;
+        }
     }
 
     &__content {
@@ -59,6 +61,7 @@
     }
 
     @include r($sm) {
-        padding: 0 5px;
+        flex-direction: column;
+        padding: 10px 5px;
     }
 }
