--- a/app/scss/components/_footer.scss
+++ b/app/scss/components/_footer.scss
@@ -66,13 +66,16 @@
 
     &__title {
         position: relative;
+        display: block;
         margin-bottom: 20px;
+        border: none;
         font-family: "DMSans", sans-serif;
         font-weight: 700;
         font-size: 16px;
         line-height: 1.3;
         text-transform: uppercase;
         color: #1f2044;
+        background-color: transparent;
         pointer-events: none;
 
         @include r($xsm) {
@@ -82,7 +85,7 @@
                 &::after {
                     content: ">";
                     position: absolute;
-                    right: 50px;
+                    right: -20px;
                     top: -10px;
                     font-size: 30px;
                     transform: rotate(90deg);
@@ -92,11 +95,6 @@
 
             &--active {
                 &::after {
-                    content: ">";
-                    position: absolute;
-                    right: 50px;
-                    top: -10px;
-                    font-size: 30px;
                     transform: rotate(-90deg);
                 }
             }
