--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -4,7 +4,7 @@
     right: 0;
     top: 0;
     z-index: 10;
-    transition: background-color 0.3s;
+    transition: background-color 0.3s, transform 0.3s;
 
     &__inner {
         display: flex;
@@ -33,6 +33,16 @@
         .header__inner {
             padding: 20px 0;
         }
+
+        @include r($md) {
+            transform: translateY(0);
+        }
+    }
+
+    &--visible {
+        @include r($md) {
+            transform: translateY(-100%);
+        }
     }
 }
 
@@ -49,12 +59,14 @@
 
 .burger {
     position: relative;
+    left: 0;
     z-index: 3;
     display: none;
     width: 55px;
     height: 40px;
     border: none;
     background-color: transparent;
+    transition: left 0.8s;
 
     &::before,
     &::after {
@@ -90,6 +102,8 @@
         display: block;
 
         &--active {
+            left: 50%;
+
             &::before {
                 top: 18px;
                 transform: rotate(45deg);
@@ -103,6 +117,14 @@
             .burger__line {
                 opacity: 0;
             }
+        }
+    }
+
+    @include r($md) {
+        display: block;
+
+        &--active {
+            left: 0;
         }
     }
 }
@@ -147,6 +169,7 @@
         }
 
         @include r($lg) {
+            display: block;
             padding: 10px 0;
             font-size: 30px;
         }
@@ -176,6 +199,10 @@
             .menu__link {
                 font-weight: 400;
                 font-size: 14px;
+
+                @include r($md) {
+                    font-size: 16px;
+                }
             }
 
             &:not(:last-child) {
