--- a/app/scss/forms/_subscribtion-form.scss
+++ b/app/scss/forms/_subscribtion-form.scss
@@ -38,5 +38,9 @@
         font-weight: 400;
         font-size: 14px;
         line-height: 1.5;
+
+        @include r($md) {
+            font-size: 16px;
+        }
     }
 }
