--- a/app/scss/index/_advantages.scss
+++ b/app/scss/index/_advantages.scss
@@ -16,22 +16,40 @@
         max-width: 600px;
         background-color: #fef7f0;
 
+        &:not(:last-child) {
+            border-right: 1px solid rgba(36, 63, 77, 0.1);
+        }
+
         @include r($lg) {
             flex-basis: 50%;
+
+            &:not(:last-child) {
+                border-bottom: 1px solid rgba(36, 63, 77, 0.1);
+            }
+
+            &:last-child {
+                flex-basis: 100%;
+                max-width: 100%;
+            }
+
+            &:nth-child(even) {
+                border-right: 0;
+            }
         }
 
         @include r($md) {
-            flex-basis: auto;
-            padding: 28px 20px;
-        }
-    }
-
-    &__item:not(:last-child) {
-        border-right: 1px solid rgba(36, 63, 77, 0.1);
-
-        @include r($md) {
+            flex-basis: 100%;
+            max-width: 100%;
             border-right: none;
             border-bottom: 1px solid rgba(36, 63, 77, 0.1);
+
+            &:not(:last-child) {
+                border-right: none;
+            }
+        }
+
+        @include r($xsm) {
+            padding-left: 30px;
         }
     }
 
@@ -53,7 +71,10 @@
             background-repeat: no-repeat;
 
             @include r($xsm) {
-                display: none;
+                left: auto;
+                right: 0;
+                top: auto;
+                bottom: -32px;
             }
         }
 
@@ -83,5 +104,14 @@
         @include line-clamp(3);
 
         color: #585858;
+    }
+
+    @include r($lg) {
+        flex-basis: 50%;
+    }
+
+    @include r($md) {
+        flex-basis: auto;
+        padding: 28px 20px;
     }
 }
