--- a/app/scss/index/_video-popup.scss
+++ b/app/scss/index/_video-popup.scss
@@ -4,7 +4,6 @@
     align-items: center;
     justify-content: center;
     height: 500px;
-    background-image: url("../../images/decor/video-popup.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 
@@ -19,7 +18,7 @@
         border: 3px solid transparent;
         border-radius: 50%;
         box-shadow: 0 0 0 0 rgba(163, 187, 200, 0.3);
-        background-image: url("../../images/sprite.svg#play");
+        background-image: url("../images/sprite.svg#play");
         background-position: center 30px;
         background-size: 25px;
         background-repeat: no-repeat;
