--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -4,20 +4,21 @@
 
 // screen size
 
+$xsm: 380px;
 $sm: 576px;
 $md: 768px;
 $lg: 992px;
 $xl: 1200px;
-$xxl: 1400px;
 
 // blue
 $blue20: #a3bbc8;
 $blue70: #436372;
 $blue80: #243f4d;
+$blue90: #222933;
 
 // rose
 $pink20: #feefe2;
-$pink50: #fcd7b6;
+$pink50: rgb(252, 215, 182);
 
 // grey
 $gray50: #8b8b8b;
