--- a/scss/cards/_design-card.scss
+++ b/scss/cards/_design-card.scss
@@ -9,7 +9,7 @@
 
     &__link {
         display: block;
-        padding: 40px 0 0 35px;
+        padding: 30px 0 0 35px;
         width: 100%;
         height: 100%;
         outline: transparent;
@@ -26,12 +26,19 @@
             background-color: rgba(139, 139, 139, 0.3);
         }
 
-        &:active .design-card__image {
+        &:active .design-card__box {
             transform: scale(1.2);
+        }
+
+        @include r($md) {
+            padding-left: 20px;
         }
     }
 
     &__title {
+        @include line-clamp(2);
+
+        margin-bottom: 8px;
         width: 175px;
         font-size: 20px;
         line-height: 1;
@@ -42,12 +49,12 @@
         color: $blue20;
     }
 
-    &__image {
+    &__box {
         position: absolute;
         right: 0;
         bottom: 0;
         width: 100%;
-        height: 180px;
+        height: 150px;
         max-width: 350px;
         transition: transform 0.5s;
     }
@@ -55,7 +62,7 @@
     &__img {
         position: absolute;
         left: 75%;
-        bottom: 0;
+        bottom: 20px;
         height: 100%;
         object-fit: contain;
         transform: translateX(-50%);
