--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,16 +1,44 @@
 .footer {
-    padding-top: 90px;
+    padding-top: 43px;
 
     &__top {
         display: flex;
         justify-content: space-between;
         padding: 30px 0;
         border-bottom: 1px solid #dae4e9;
+
+        @include r($lg) {
+            flex-wrap: wrap;
+        }
+
+        @include r($sm) {
+            justify-content: flex-start;
+        }
     }
 
-    &__columns {
+    // в прошлый раз ты ругал пиксель в футере, поэтому я сделал для первого элемента margin top -20 px,
+    // так как по пикселю он выше остальных
+
+    &__column {
         flex-basis: 300px;
         padding: 0 5px;
+
+        &:first-child {
+            margin-top: -20px;
+        }
+
+        @include r($lg) {
+            flex-basis: auto;
+            margin-bottom: 30px;
+        }
+
+        @include r($sm) {
+            flex-basis: 170px;
+
+            &:first-child {
+                flex-basis: 100%;
+            }
+        }
     }
 
     &__logo {
@@ -27,7 +55,8 @@
     }
 
     &__contact {
-        display: block;
+        @include line-clamp(3);
+
         margin-bottom: 10px;
     }
 
@@ -36,18 +65,58 @@
     }
 
     &__title {
+        position: relative;
+        display: block;
         margin-bottom: 20px;
+        border: none;
         font-family: "DMSans", sans-serif;
         font-weight: 700;
         font-size: 16px;
         line-height: 1.3;
         text-transform: uppercase;
         color: #1f2044;
+        background-color: transparent;
+        pointer-events: none;
+
+        @include r($xsm) {
+            pointer-events: auto;
+
+            &--slide {
+                &::after {
+                    content: ">";
+                    position: absolute;
+                    right: -20px;
+                    top: -10px;
+                    font-size: 30px;
+                    transform: rotate(90deg);
+                    transition: transform 0.3s;
+                }
+            }
+
+            &--active {
+                &::after {
+                    transform: rotate(-90deg);
+                }
+            }
+        }
     }
 
     &__list {
+        display: block;
         padding-right: 5px;
         width: 150px;
+
+        @include r($lg) {
+            width: auto;
+        }
+
+        @include r($xsm) {
+            display: none;
+        }
+    }
+
+    &__link {
+        @include line-clamp(1);
     }
 
     &__item {
@@ -60,6 +129,8 @@
     }
 
     &__text {
+        @include line-clamp(3);
+
         margin-bottom: 30px;
         width: 240px;
         font-size: 14px;
@@ -71,11 +142,23 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 18px 0;
+        padding: 40px 0;
     }
 
     &__copy {
+        @include line-clamp(3);
+
+        max-width: 400px;
         font-size: 14px;
         color: $gray60;
+
+        @include r($xsm) {
+            width: 210px;
+            font-size: 16px;
+        }
+    }
+
+    @include r($lg) {
+        padding-top: 50px;
     }
 }
