--- a/scss/index/_design.scss
+++ b/scss/index/_design.scss
@@ -1,19 +1,44 @@
 .design {
-    padding: 105px 120px;
+    padding: 95px 10px 120px;
 
     &__title {
         @include line-clamp (2);
 
-        margin-bottom: 35px;
+        margin-bottom: 20px;
     }
 
-    &__list {
+    &__mix-filter {
         margin-bottom: 80px;
+
+        @include r($lg) {
+            margin-bottom: 50px;
+        }
     }
 
     &__cards {
         display: grid;
         grid-gap: 35px 30px;
         grid-template-columns: repeat(3, 1fr);
+
+        @include r($lg) {
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+        @include r($sm) {
+            grid-template-columns: 1fr;
+        }
+    }
+
+    &__item {
+        width: 100%;
+        max-width: 370px;
+
+        @include r($lg) {
+            justify-self: center;
+        }
+    }
+
+    @include r($lg) {
+        padding: 70px 0;
     }
 }
