--- a/scss/index/_products.scss
+++ b/scss/index/_products.scss
@@ -1,11 +1,11 @@
 .products {
-    padding: 70px 0 0;
+    padding: 60px 0 0;
 
     &__title {
         margin-bottom: 20px;
     }
 
-    &__list {
+    &__mix-filter {
         margin-bottom: 80px;
     }
 
@@ -13,6 +13,14 @@
         display: flex;
         flex-wrap: wrap;
         margin: 0 -15px 135px;
+
+        @include r($xl) {
+            justify-content: center;
+        }
+
+        @include r($md) {
+            margin-bottom: 70px;
+        }
     }
 
     &__item {
@@ -25,48 +33,15 @@
         display: grid;
         grid-column-gap: 30px;
         grid-template-columns: repeat(2, 1fr);
-    }
 
-    &__card {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding-right: 150px;
-        width: 100%;
-        min-height: 390px;
-        max-width: 870px;
-        background-color: $pink20;
-    }
+        @include r($xl) {
+            justify-items: center;
+            grid-row-gap: 100px;
+            grid-template-columns: 1fr;
+        }
 
-    &__image {
-        flex-basis: 355px;
-        margin-top: -180px;
-        margin-right: 15px;
-    }
-
-    &__img {
-        margin-left: auto;
-    }
-
-    &__content {
-        color: $blue80;
-    }
-
-    &__title {
-        @include line-clamp (2);
-
-        margin-bottom: 33px;
-        width: 270px;
-        font-family: "DMSans", sans-serif;
-        font-weight: 700;
-        font-size: 26px;
-        line-height: 1.2;
-    }
-
-    &__text {
-        @include line-clamp (2);
-
-        margin-bottom: 40px;
-        max-width: 330px;
+        @include r($md) {
+            grid-row-gap: 50px;
+        }
     }
 }
