--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -28,6 +28,7 @@
 @import "components/header";
 @import "components/footer";
 @import "filters/mix-filter";
+@import "filters/filter-shop";
 @import "cards/design-card";
 @import "buttons/main-buttons";
 @import "buttons/clickable-area";
