--- a/app/scss/filters/_filter-shop.scss
+++ b/app/scss/filters/_filter-shop.scss
@@ -1,15 +1,14 @@
 .filter-shop {
+    margin-bottom: 50px;
     width: 100%;
     max-width: 270px;
-
-    &__item:not(:last-child) {
-        margin-bottom: 60px;
-    }
 }
 
 .category {
+    margin-bottom: 43px;
+
     &__title {
-        margin-bottom: 30px;
+        margin-bottom: 20px;
     }
 
     &__label {
@@ -21,7 +20,7 @@
         position: relative;
         display: inline-block;
         flex: 1 1 auto;
-        padding: 15px 20px 15px 15px;
+        padding: 8px 20px 8px 15px;
         border-radius: 5px;
         color: $blue80;
         transition: background-color 0.3s, color 0.3s;
@@ -51,8 +50,10 @@
 }
 
 .price {
+    margin-bottom: 80px;
+
     &__title {
-        margin-bottom: 30px;
+        margin-bottom: 10px;
     }
 
     &__input {
@@ -66,6 +67,10 @@
         font-size: 14px;
         line-height: 1.1;
         color: $blue80;
+    }
+
+    .irs--flat {
+        height: 47px;
     }
 
     .irs-line,
@@ -110,7 +115,7 @@
 
     &__box {
         display: flex;
-        padding: 15px 25px 15px 15px;
+        padding: 6px 25px 5px 15px;
         border-radius: 5px;
         color: $blue80;
         transition: background-color 0.3s, color 0.3s;
