--- a/app/scss/buttons/_circle-btn.scss
+++ b/app/scss/buttons/_circle-btn.scss
@@ -37,7 +37,7 @@
 
     &--icon {
         margin-right: 15px;
-        box-shadow: 0 0 5px 4px rgba(37, 37, 37, 0.6);
+        box-shadow: 3px 3px 4px 0 rgba(37, 37, 37, 0.6);
 
         svg {
             fill: $blue20;
