--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -15,6 +15,9 @@
 @import "index/products";
 @import "index/design";
 
+// products
+
+@import "products/products";
 
 // components
 
@@ -23,7 +26,10 @@
 @import "cards/promo-card";
 @import "components/partners";
 @import "cards/article-card";
+@import "cards/recent-product";
 @import "components/articles";
+@import "components/pagination";
+@import "components/recent-products";
 @import "components/breadcrumbs";
 @import "components/header";
 @import "components/footer";
