added adaptive product page

--- a/app/html/parts/components/_header.html
+++ b/app/html/parts/components/_header.html
@@ -3,7 +3,7 @@
         <div class="header__inner">
             <nav class="menu">
                 <a class="logo header__logo" href="#">
-                    <img class="logo__image" src="images/icons/logo.svg" alt="logo Glee">
+                    <img class="logo__image" src="images/icons/logo.png" alt="logo Glee">
                 </a>
                 <button class="burger">
                     <span class="burger__line"></span>
@@ -21,7 +21,7 @@
                     </li>
                     <li class="menu__item">
                         <a class="menu__link link clickable" href="#">
-                            Service
+                            Services
                         </a>
                     </li>
                     <li class="menu__item">
