--- a/app/scss/products/_products.scss
+++ b/app/scss/products/_products.scss
@@ -5,10 +5,15 @@
         display: flex;
     }
 
-    &__filter {
+    &__sidebar {
         margin-right: 30px;
         width: 100%;
         max-width: 270px;
+
+        @include r($lg) {
+            margin-right: 0;
+            max-width: 0;
+        }
     }
 
     &__content {
@@ -20,6 +25,10 @@
         margin-bottom: 30px;
         padding: 10px;
         border: 2px solid $blue20;
+
+        @include r($sm) {
+            display: none;
+        }
     }
 
     &__btn {
@@ -51,11 +60,16 @@
             }
         }
     }
+
+    @include r($md) {
+        padding-bottom: 60px;
+    }
 }
 
 .product-shop {
     &__content {
         display: grid;
+        justify-items: center;
         grid-gap: 35px 29px;
         grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
         margin-bottom: 100px;
@@ -64,8 +78,47 @@
             grid-template-columns: 1fr;
         }
     }
+
+    @include r($lg) {
+        &__pagination {
+            margin-bottom: 50px;
+        }
+    }
 }
 
 ul.product-shop__pagination--active {
     justify-content: left;
+}
+
+.filter-button {
+    position: fixed;
+    right: 5%;
+    bottom: 5%;
+    z-index: 100;
+    display: none;
+    opacity: 1;
+    width: 50px;
+    height: 50px;
+    border: none;
+    background-color: rgba(240, 240, 240, 0.7);
+    transition: opacity 0.5s;
+
+    svg {
+        width: 30px;
+        height: 100%;
+        fill: $blue80;
+    }
+
+    &--disable {
+        display: none;
+    }
+
+    @include r($lg) {
+        display: block;
+
+        &--disable {
+            visibility: hidden;
+            opacity: 0;
+        }
+    }
 }
