--- a/app/scss/components/_footer.scss
+++ b/app/scss/components/_footer.scss
@@ -3,8 +3,7 @@
 
     &__top {
         display: flex;
-        justify-content: space-between;
-        padding: 30px 0;
+        padding: 30px 0 65px;
         border-bottom: 1px solid #dae4e9;
 
         @include r($lg) {
@@ -20,8 +19,11 @@
     // так как по пикселю он выше остальных
 
     &__column {
-        flex-basis: 300px;
-        padding: 0 5px;
+        flex-basis: 270px;
+
+        &:not(:last-child) {
+            margin-right: 30px;
+        }
 
         &:first-child {
             margin-top: -20px;
@@ -67,7 +69,7 @@
     &__title {
         position: relative;
         display: block;
-        margin-bottom: 20px;
+        margin-bottom: 12px;
         border: none;
         font-family: "DMSans", sans-serif;
         font-weight: 700;
@@ -125,13 +127,13 @@
     }
 
     &__item:not(:last-child) {
-        margin-bottom: 10px;
+        margin-bottom: 5px;
     }
 
     &__text {
         @include line-clamp(3);
 
-        margin-bottom: 30px;
+        margin-bottom: 41px;
         width: 240px;
         font-size: 14px;
         line-height: 1.7;
@@ -142,7 +144,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 40px 0;
+        padding: 30px 0;
     }
 
     &__copy {
