--- a/app/scss/filters/_filter-shop.scss
+++ b/app/scss/filters/_filter-shop.scss
@@ -1,3 +1,41 @@
+.shop-filter {
+    width: 100%;
+    max-width: 270px;
+
+    @include r($lg) {
+        position: fixed;
+        visibility: hidden;
+        opacity: 0;
+        transition: opacity 0.5s, width 0.5s;
+
+        &--active {
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            z-index: 50;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            visibility: visible;
+            opacity: 1;
+            max-width: 100%;
+            background-color: rgba(36, 63, 77, 0.5);
+
+            .filter-shop {
+                margin: 0 auto;
+                padding: 20px;
+                height: 80vh;
+                max-width: 300px;
+                overflow-y: scroll;
+                border-radius: 5px;
+                background-color: $bg;
+            }
+        }
+    }
+}
+
 .filter-shop {
     margin-bottom: 50px;
     width: 100%;
@@ -5,10 +43,10 @@
 }
 
 .category {
-    margin-bottom: 43px;
+    margin-bottom: 56px;
 
     &__title {
-        margin-bottom: 20px;
+        margin-bottom: 22px;
     }
 
     &__label {
@@ -17,10 +55,12 @@
     }
 
     &__item {
+        @include line-clamp (1);
+
         position: relative;
         display: inline-block;
         flex: 1 1 auto;
-        padding: 8px 20px 8px 15px;
+        padding: 8px 20px 5px 15px;
         border-radius: 5px;
         color: $blue80;
         transition: background-color 0.3s, color 0.3s;
@@ -134,6 +174,8 @@
     }
 
     &__item {
+        @include line-clamp (1);
+
         flex: 1 1 auto;
     }
 
