added about us page

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -19,6 +19,12 @@
 
 @import "products/products";
 
+// about-us
+
+@import "about-us/about";
+@import "about-us/statistics";
+@import "about-us/team";
+
 // components
 
 @import "buttons/circle-btn";
