--- a/app/scss/components/_breadcrumbs.scss
+++ b/app/scss/components/_breadcrumbs.scss
@@ -1,5 +1,5 @@
 .breadcrumbs {
-    margin: 145px 0 110px;
+    margin: 145px 0 0;
     padding: 30px 0;
     text-align: center;
     background-color: #edf1f4;
