--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -25,6 +25,11 @@
 @import "about-us/statistics";
 @import "about-us/team";
 
+//blog-list
+
+@import "blog-list/blog-list";
+@import "cards/blog-list-card";
+
 // components
 
 @import "buttons/circle-btn";
