added terms page

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -25,6 +25,18 @@
 @import "about-us/statistics";
 @import "about-us/team";
 
+// log-in
+
+@import "log-in/log-in";
+
+// terms
+
+@import "terms/terms";
+
+// contact
+
+@import "contact/contact";
+
 //blog-list
 
 @import "blog-list/blog-list";
