added blog-one page and product adaptive

--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -11,7 +11,7 @@ $lg: 992px;
 $xl: 1200px;
 
 // blue
-$blue20: rgb(163, 187, 200);
+$blue20: #a3bbc8;
 $blue70: #436372;
 $blue80: #243f4d;
 $blue90: #222933;
