--- a/app/scss/cards/_product-card.scss
+++ b/app/scss/cards/_product-card.scss
@@ -180,4 +180,9 @@
             height: 400px;
         }
     }
+
+    @include r($lg) {
+        width: auto;
+        max-width: 460px;
+    }
 }
