--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -29,6 +29,10 @@
 
 @import "log-in/log-in";
 
+// blog-one
+
+@import "blog-one/blog-one";
+
 // terms
 
 @import "terms/terms";
@@ -66,6 +70,7 @@
 @import "buttons/main-buttons";
 @import "buttons/clickable-area";
 @import "forms/subscribtion-form";
+@import "forms/contact-form";
 @import "cards/product-card";
 
 
